[Fix] Toned down the header z-index

--- a/frontend/src/components/layout/Header.module.css
+++ b/frontend/src/components/layout/Header.module.css
@@ -3,7 +3,7 @@
     position: sticky;
     top: 0;
     left: 0;
-    z-index: 999;
+    z-index: 2;
     margin-bottom: 2em;
     background-color: var(--black);
     box-shadow: 0 2px 4px rgba(0,0,0,.3);
